# Gestalt-Lib-HS-SPI

./: .gitignore  A-model.md  A-notes.md  A1-model.md  A1-notes.md  Gestalt-Lib-HS-SPI.code-workspace  Readme.md  SPI.md  async_fifo.v  lab_sys_core.v  sine_gen.v  spi_master.v  spi_master_controller.v  spi_slave_controller.v  spi_slave_shift.v  spi_verify_top.v  sync_fifo.v
AI文本/: async_fifo_仿真工作流.md  async_fifo_仿真注意事项.md
Code/: async_fifo.v  sine_gen.v  spi_fifo_interface.v  spi_slave_shift.v  triangle_gen.v  uart_echo_core.v  uart_rx.v  uart_tx.v  uart_wave_core.v
Gowin/: 立创逻辑派FPGA_G1_IO.cst
Projects/history/lab_sys/: lab_sys.cst  测试.md
Projects/history/lab_sys_ext/: gowin_rpll_200m.v  lab_sys_ext.cst  测试.md
Projects/history/uart_wave/: uart_wave.cst  uart_wave.v  测试.md
Projects/lab_sys/: lab_sys.sdc  lab_sys.v
Projects/lab_sys_ext/: lab_sys_ext.sdc  lab_sys_ext.v  测试.md
Projects/spi_verify/: spi_verify.cst  spi_verify.sdc  spi_verify.v  测试.md
Projects/uart_wave/: uart_wave.sdc
Tex/: spi-adc.md
async_fifo/: Makefile  async_fifo.v  sim.md
async_fifo/tb/: wave_probes.v
host/: lab_sys_listen.py  lab_sys_plot.py  test_lab_sys_plot_loop.py  uart_wave_echo.py  uart_wave_listen.py  uart_wave_plot.py
internal/: README.md
internal/archive/history/spi_slave/spi_slave_cursor/: Makefile
internal/docs/: SPI.md  async_fifo-sim.md  spi_slave.md  寄存器.md
sim/: Makefile
sim/async_fifo/: Makefile  wave.gtkw
sim/async_fifo/tb/: tb_async_fifo.v  tb_wave1.v  tb_wave2.v
sim/spi_master/: Makefile
sim/spi_master/tb/: tb_spi_master.v
sim/spi_slave/: Makefile
sim/spi_slave/tb/: tb_spi_slave.v
sim/spi_slave_controller/: Makefile
sim/spi_slave_controller/tb/: tb_spi_slave_controller.v
spi_slave/: spi_slave.md
spi_slave/spi_slave_cursor/tb/: tb_spi_slave.v
spi_slave/spi_slave_learning/: spi_controller.v  spi_shift.v  spi_slave_top.v
spi_slave/spi_slave_p1/: spi_slave_p1.gprj
spi_slave/spi_slave_p1/src/: spi_byte_engine.v  spi_controller.v  spi_phy.v  spi_shift_register.v  spi_slave_top.v  spi_user_if.v
spi_test/inc/: board.h
spi_test/src/: spi_master.c  uart_console.c
text/: spi_slave.md
text/history/spi_slave/spi_slave_cursor/: spi_slave_p1.gprj
text/history/spi_slave/spi_test/: CMakeLists.txt  CMakePresets.json
text/history/spi_slave/spi_test/cmake/: arm-none-eabi-gcc.cmake
text/history/spi_slave/spi_test/inc/: spi_master.h  uart_console.h
text/history/spi_slave/spi_test/linker/: GD32F303C8.ld
text/history/spi_slave/spi_test/src/: main.c
(+8 files in other folders)
